--- a/2024/01/Dockerfile
+++ b/2024/01/Dockerfile
@@ -1,3 +1,3 @@
 FROM python:latest
 
-RUN pip install pytest pytest-mypy pytest-cov
+RUN pip install pytest pytest-mypy pytest-cov pytest-pylint pytest-flake8
